# v2rayu-updater

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/v2rayu_updater/: __init__.py  apply_ops.py  cli.py  config_plan.py  plist_store.py  subscriptions.py
tests/: test_apply_ops.py  test_cli_entries.py  test_config_plan.py  test_subscriptions.py
